--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,18 @@
 cloudpickle==2.2.1
+contourpy==1.1.1
+cycler==0.12.1
 Farama-Notifications==0.0.4
+fonttools==4.43.1
 gymnasium==0.29.1
+kiwisolver==1.4.5
+matplotlib==3.8.0
 numpy==1.26.0
 opencv-python==4.8.1.78
+packaging==23.2
+Pillow==10.0.1
 pygame==2.5.2
+pyparsing==3.1.1
+python-dateutil==2.8.2
+six==1.16.0
 tqdm==4.66.1
 typing_extensions==4.8.0
